fix z-index problem in area map select device

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,7 +86,8 @@ html {
         position: relative;
 
         /* z-index must be higher than .hyt-modal-background */
-        z-index: 1004;
+        //z-index: 1004;
+        z-index: 1002;
 
         /* enables scrolling for tall modals */
         //overflow: auto;
@@ -129,7 +130,8 @@ html {
         opacity: 0;
 
         /* z-index must be below .hyt-modal and above everything else  */
-        z-index: 1003;
+        //z-index: 1003;
+        z-index: 1001;
 
         -webkit-animation-name: modalOpacity;
         /* Safari 4.0 - 8.0 */
