--- a/src/app/pages/projects/project-detail/project-detail.component.scss
+++ b/src/app/pages/projects/project-detail/project-detail.component.scss
@@ -261,7 +261,7 @@
                 left: 0px;
                 flex-direction: column;
                 background-color: #fff;
-                z-index: 1;
+                z-index: 2;
                 margin-bottom: 20px;
 
                 -webkit-box-shadow: 0 0 14px -3px black;
